src/pages/components/NavMenu.css
.nav-header {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
    padding: 10px;
    color: black;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
}

.title-container {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    justify-content: space-between;
}

h1 {
    margin: 0;
    font-size: 1.5em;
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: left;
}

.hamburger-btn {
    background-color: transparent;
    align-self: center;
    border: none;
    cursor: pointer;
    outline: black;
}

.hamburger-icon {
    display: block;
    width: 25px;
    height: 3px;
    background-color: black;
    margin: 5px;
}

.nav-list {
    display: none;
    flex-direction: column;
    align-items: center;
    margin-top: 10px;
}

.nav-list li {
    margin: 10px;
}

.nav-button {
    text-align: center;
    max-width: 100%;
    padding: 1rem;
    display: block;
    text-decoration: none;
}

@media (max-width: 720px) {
    .nav-button {
        width: 100%;
    }
}

.nav-button :hover {
    padding: 1rem;
    display: block;
    color: white;
    background-color: #374780;
    cursor: pointer;
}

.show {
    display: flex;
}

#sidebar {
    text-align: center;
    width: 12rem;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    overflow-y: hidden;
}

#sidebar:hover {
    overflow-y: auto;
}

#sidebarTitle {
    margin: 0 !important;
    padding: 1rem;
}


#sidebarLinksContainer {
    width: 100%;
    /* display: block; */
}

#sidebarLinksContainer a {
    padding: 1rem;
    display: block;
    text-decoration: none;
}

#sidebarLinksContainer a:hover {
    padding: 1rem;
    display: block;
    color: white;
    background-color: #374780;
    cursor: pointer;
}

#sidebarCreditContainer {
    /* display: block; */
    bottom: 0;
    margin: 1rem;
    width: 10rem;
}

/* Header */
@media (max-width: 720px) {
    #sidebar {
        position: relative;
        left: 0;
        bottom: 0;
        text-align: center;
        width: 100%;
    }

    #sidebarCreditContainer {
        float: center;
        position: relative;
        display: block;
        bottom: 0;
        width: 10rem;
        margin: auto;
    }
}

/* Sidebar padding */

body {
    padding-left: 12rem;
}

@media (max-width: 720px) {
    body {
        padding-left: 0;
    }
}

/* Logo sizing */

#githubLogo {
    vertical-align: middle;
    display: inline;
    width: 4em;
}

#linkedinLogo {
    vertical-align: middle;
    display: inline;
    width: 5em;
}

